objects/pepCampaignReportIDs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ReportId__c</fullName>
        <label>ReportId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepCampaignReportCatg__c</fullName>
        <label>pepCampaignReportCatg</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>CampaignReportIDs</label>
</CustomObject>